--- a/src/UniNotifier_en_us.resx
+++ b/src/UniNotifier_en_us.resx
@@ -317,10 +317,10 @@ It is also possible to display a notification only if this condition is met</val
     <value>Re-request all news to check settings?</value>
   </data>
   <data name="ShareVariant" xml:space="preserve">
-    <value>Do you want to share all configured notifications?
+    <value>How do you want to share configured notifications?
 
-• Click “Yes” to save all settings to the file;
-• Click “No” to send settings of the current notification to the clipboard</value>
+• Click “To file” to save all settings to the file;
+• Click “To clipboard” to send settings of the current notification to the clipboard</value>
   </data>
   <data name="ShareFailure" xml:space="preserve">
     <value>Failed to create notifications settings file. Try choosing a different location</value>
@@ -333,5 +333,11 @@ It is also possible to display a notification only if this condition is met</val
   </data>
   <data name="TemplateFile" xml:space="preserve">
     <value>From &amp;file</value>
+  </data>
+  <data name="ShareClipboard" xml:space="preserve">
+    <value>To clip&amp;board</value>
+  </data>
+  <data name="ShareFile" xml:space="preserve">
+    <value>To &amp;file</value>
   </data>
 </root>
